add background on info-room and images on filter-room

--- a/src/blocks/airdatepicker/airdatepicker.scss
+++ b/src/blocks/airdatepicker/airdatepicker.scss
@@ -46,6 +46,7 @@
         font-size: 18px;
         line-height: 18px;
         color: $color-standart;
+        color:  rgba(31, 32, 65, 0.75);
       }
 }
 
@@ -138,8 +139,9 @@
       .datepicker--cell.-current-.-in-range- {
         color: #4EB5E6; }
     .datepicker--cell.-in-range- {
-      background: rgba(92, 196, 239, 0.1);
-      color: #4a4a4a;
+      background: linear-gradient(180deg, #BC9CFF 0%, #8BA4F9 100%);
+      opacity: 0.25;
+      color: black;
       border-radius: 0; }
       .datepicker--cell.-in-range-.-focus- {
         background-color: rgba(92, 196, 239, 0.2); }
@@ -167,9 +169,7 @@
       border: none;
       background: linear-gradient(180deg, #BC9CFF 0%, #8BA4F9 100%);
      border-radius: 50%; 
-    &::before{
-      
-    }}
+}
 
       .datepicker--cell.-selected-.-current- {
         color: #fff;
