--- a/src/blocks/littleDropdown/littleDropdown.pug
+++ b/src/blocks/littleDropdown/littleDropdown.pug
@@ -4,19 +4,19 @@ label.little-dropdowns
   ul(class="dd-menu")
     li()
       p(class="title") Взрослые
-      .flex
+      .flex-row
         button(class="plus button" id="adult_plus") +
         p(class="text" id='adult_text') 0
         button(class="minus button" id="adult_minus") -
     li()
       p(class="title") Дети
-      .flex
+      .flex-row
          button(class="plus button" id='child_plus') +
          p(class="text" id="child_text") 0
          button(class="minus button" id="child_minus") -
     li( )
        p(class="title") Младенцы
-       .flex
+       .flex-row
          button(class="plus button" id="baby_plus") +
          p(class="text" id="baby_text") 0
          button(class="minus button" id="baby_minus") -
