--- a/src/components/signin-form/signin-form.pug
+++ b/src/components/signin-form/signin-form.pug
@@ -10,6 +10,6 @@
 
         button(type="button" class="btn  btn-confirm btn__signin") Войти
         
-        .display__flex
+        .flex-row
           div(class="text text__signin") Нет аккаунта на Toxin?
           +button-signin('Создать', 'signin-page.html', "btn__create")
