--- a/src/components/signin-form/signin-form.scss
+++ b/src/components/signin-form/signin-form.scss
@@ -32,7 +32,28 @@
     margin-top: 45px;
 }
 
-.display__flex{
-    display: flex;
-    justify-content: space-between;
-}
+// .display__flex{
+//     display: flex;
+//     justify-content: space-between;
+// }
+
+
+
+// @media only screen and (max-width: 700px) {
+  
+//   .wrap{
+//     width: 300px;
+//   }
+
+//   .input_text {
+//     width: 280px;
+//     height: 45px;
+// }
+
+// .btn-confirm {
+//   width: 280px;
+//   height: 45px;
+//   font-size: 16px;
+
+// }
+// }
