--- a/src/blocks/littleDropdown/littleDropdown.scss
+++ b/src/blocks/littleDropdown/littleDropdown.scss
@@ -48,6 +48,7 @@
   background-color: #ffffff;
   list-style-type: none;
   z-index: 10;
+  width: 395px;
 }
 
 .little-dropdowns .dd-input + .dd-menu {
@@ -127,12 +128,12 @@
   outline: none;
 }
 
-@media only screen and (max-width: 600px) {
-  .little-dropdowns .dd-button {
-    display: inline-block;
-    border: 1px solid rgba(31, 32, 65, 0.25);
-    border-radius: 4px;
-    width: 310px;
-    height: 55px;
-  }
-}
+// @media only screen and (max-width: 600px) {
+//   .little-dropdowns .dd-button {
+//     display: inline-block;
+//     border: 1px solid rgba(31, 32, 65, 0.25);
+//     border-radius: 4px;
+//     width: 310px;
+//     height: 55px;
+//   }
+// }
