--- a/src/blocks/slick/slick.scss
+++ b/src/blocks/slick/slick.scss
@@ -5,287 +5,319 @@
  * @description: A Simple Carousel Pure CSS Using Sass
  * @version: 1.0.0
  */
- %animation-default {
-	opacity: 1 !important;
-	z-index: 3;
-  }
+%animation-default {
+  opacity: 1 !important;
+  z-index: 3;
+}
 
-  @mixin carousel($items, $animation: 'default') {
-	.carousel, .carousel1, .carousel2, .carousel3, .carousel4, .carousel5, .carousel6, .carousel7, .carousel8, .carousel9, .carousel10, .carousel11{
-	  width: 100%;
-	  position: relative;
-	  overflow: hidden;
-  
-	  > input[type="radio"] {
-		position: absolute;
-		left: 0;
-		opacity: 0;
-		top: 0;
-  
-		&:checked {
-		  ~ .carousel__items .carousel__item,
-		  ~ .carousel__prev > label,
-		  ~ .carousel__next > label,
-		  ~ .carousel1__items .carousel1__item,
-		  ~ .carousel1__prev > label,
-		  ~ .carousel1__next > label,
-		  ~ .carousel2__items .carousel2__item,
-		  ~ .carousel2__prev > label,
-		  ~ .carousel2__next > label,
-		  ~ .carousel3__items .carousel3__item,
-		  ~ .carousel3__prev > label,
-		  ~ .carousel3__next > label,
-		  ~ .carousel4__items .carousel4__item,
-		  ~ .carousel4__prev > label,
-		  ~ .carousel4__next > label,
-		  ~ .carousel5__items .carousel5__item,
-		  ~ .carousel5__prev > label,
-		  ~ .carousel5__next > label,
-		  ~ .carousel6__items .carousel6__item,
-		  ~ .carousel6__prev > label,
-		  ~ .carousel6__next > label,
-		  ~ .carousel7__items .carousel7__item,
-		  ~ .carousel7__prev > label,
-		  ~ .carousel7__next > label,
-		  ~ .carousel8__items .carousel8__item,
-		  ~ .carousel8__prev > label,
-		  ~ .carousel8__next > label,
-		  ~ .carousel9__items .carousel9__item,
-		  ~ .carousel9__prev > label,
-		  ~ .carousel9__next > label,
-		  ~ .carousel10__items .carousel10__item,
-		  ~ .carousel10__prev > label,
-		  ~ .carousel10__next > label,
-		  ~ .carousel11__items .carousel11__item,
-		  ~ .carousel11__prev > label,
-		  ~ .carousel11__next > label {
-			opacity: 0;
-		  }
-		}
-  
-		@for $i from 1 through $items {
-		  &:nth-child(#{$i}) {
-			&:checked {
-			  ~ .carousel__items .carousel__item,
-			  ~ .carousel1__items .carousel1__item,
-			  ~ .carousel2__items .carousel2__item,
-			  ~ .carousel3__items .carousel3__item,
-			  ~ .carousel4__items .carousel4__item,
-			  ~ .carousel5__items .carousel5__item,
-			  ~ .carousel6__items .carousel6__item,
-			  ~ .carousel7__items .carousel7__item,
-			  ~ .carousel8__items .carousel8__item,
-			  ~ .carousel9__items .carousel9__item,
-			  ~ .carousel10__items .carousel10__item,
-			  ~ .carousel11__items .carousel11__item{
-				@if $animation == 'default' {
-				  &:nth-child(#{$i}) {
-					opacity: 1;
-				  }
-				}
-			  }
-  
-			  ~ .carousel__prev,
-			  ~ .carousel1__prev,
-			  ~ .carousel2__prev ,
-			  ~ .carousel3__prev,
-			  ~ .carousel4__prev,
-			  ~ .carousel5__prev ,
-			  ~ .carousel6__prev ,
-			  ~ .carousel7__prev,
-			  ~ .carousel8__prev ,
-			  ~ .carousel9__prev,
-			  ~ .carousel10__prev,
-			  ~ .carousel11__prev {
-				> label {
-				  @if $i == 1 {
-					&:nth-child(#{$items}) {
-					  @extend %animation-default;
-					}
-				  } @else if $i == $items {
-					&:nth-child(#{$items - 1}) {
-					  @extend %animation-default;
-					}
-				  } @else {
-					&:nth-child(#{$i - 1}) {
-					  @extend %animation-default;
-					}
-				  }
-				}
-			  }
-  
-			  ~ .carousel__next,
-			  ~ .carousel1__next,
-			  ~ .carousel2__next,
-			  ~ .carousel3__next,
-			  ~ .carousel4__next,
-			  ~ .carousel5__next,
-			  ~ .carousel6__next,
-			  ~ .carousel7__next,
-			  ~ .carousel8__next,
-			  ~ .carousel9__next,
-			  ~ .carousel10__next,
-			  ~ .carousel11__next{
-				> label {
-				  @if $i == $items {
-					&:nth-child(1) {
-					  @extend %animation-default;
-					}
-				  } @else {
-					&:nth-child(#{$i + 1}) {
-					  @extend %animation-default;
-					}
-				  }
-				}
-			  }
-  
-			  ~ .carousel__nav,
-			  ~ .carousel1__nav,
-			  ~ .carousel2__nav,
-			  ~ .carousel3__nav,   
-			  ~ .carousel4__nav,
-			  ~ .carousel5__nav,
-			  ~ .carousel6__nav,
-			  ~ .carousel7__nav,   
-			  ~ .carousel8__nav,
-			  ~ .carousel9__nav,
-			  ~ .carousel10__nav,
-			  ~ .carousel11__nav{
-				> label {
-				  &:nth-child(#{$i}) {
-					background: #ccc;
-					cursor: default;
-					pointer-events: none;
-				  }
-				}
-			  }
-			}
-		  }
-		}
-	  }
-  
-	  &__items {
-		margin: 0;
-		padding: 0;
-		list-style-type: none;
-		width: 100%;
-		min-height: 305px;
-		position: relative;
-	  }
-  
-	  &__item {
-		position: absolute;
-		top: 0;
-		left: 0;
-		width: 100%;
-		height: 100%;
-		z-index: 1;
-		transition: opacity 2s;
-		-webkit-transition: opacity 2s;
-		padding-right: 20px;
-  
-		img {
-		  width: 400px;
-		  height: 325px;
-		  vertical-align: middle;
-		}
-	  }
-  
-	  &__prev,
-	  &__next {
-		> label {
-		  cursor: pointer;
-		  display: block;
-		  width: 20px;
-		  height: 20px;
-		  position: absolute;
-		  top: 50%;
-		  transform: translateY(-50%);
-		  -webkit-transform: translateY(-50%);
-		  transition: all .3s ease;
-		  -webkit-transition: all .3s ease;
-		  opacity: 0;
-		  z-index: 2;
-  
-		  &:hover,
-		  &:focus {
-			opacity: .5 !important;
-		  }
-  
-		  &:before,
-		  &:after {
-			content: "";
-			position: absolute;
-			width: inherit;
-			height: inherit;
-		  }
-  
-		  &:before {
-			background: linear-gradient(to top, #fff 0%, #fff 10%, rgba(51, 51, 51, 0) 10%),
-						linear-gradient(to left, #fff 0%, #fff 10%, rgba(51, 51, 51, 0) 10%);
-			width: 60%;
-			height: 60%;
-			top: 20%;
-		  }
-		}
-	  }
-  
-	  &__prev {
-		> label {
-		  left: 2%;
-  
-		  &:before {
-			left: 35%;
-			top: 20%;
-			transform: rotate(135deg);
-			-webkit-transform: rotate(135deg);
-		  }
-		}
-	  }
-  
-	  &__next {
-		> label {
-		  right: 2%;
-  
-		  &:before {
-			left: 10%;
-			transform: rotate(315deg);
-			-webkit-transform: rotate(315deg);
-		  }
-		}
-	  }
-  
-	  &__nav {
-		margin-top: -120px;
-		padding-bottom: 20px;
-		margin-left: 140px;
-		position: relative;
-		text-align: center;
-		width: 100%;
-		z-index: 3;
-  
-		> label {
-		  border: 2px solid #fff;
-		  display: inline-block;
-		  border-radius: 50%;
-		  cursor: pointer;
-		  margin: 0 .500%;
-		  width: 12px;
-		  height: 12px;
-		}
-	  }
-	}
-  }
-  
-  *,
-  *:before,
-  *:after {
-	box-sizing: border-box;
-	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
-  }
-  
+@mixin carousel($items, $animation: "default") {
+  .carousel,
+  .carousel1,
+  .carousel2,
+  .carousel3,
+  .carousel4,
+  .carousel5,
+  .carousel6,
+  .carousel7,
+  .carousel8,
+  .carousel9,
+  .carousel10,
+  .carousel11 {
+    width: 100%;
+    position: relative;
+    overflow: hidden;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
 
-  @include carousel(4);
-  
+    > input[type="radio"] {
+      position: absolute;
+      left: 0;
+      opacity: 0;
+      top: 0;
 
+      &:checked {
+        ~ .carousel__items .carousel__item,
+        ~ .carousel__prev > label,
+        ~ .carousel__next > label,
+        ~ .carousel1__items .carousel1__item,
+        ~ .carousel1__prev > label,
+        ~ .carousel1__next > label,
+        ~ .carousel2__items .carousel2__item,
+        ~ .carousel2__prev > label,
+        ~ .carousel2__next > label,
+        ~ .carousel3__items .carousel3__item,
+        ~ .carousel3__prev > label,
+        ~ .carousel3__next > label,
+        ~ .carousel4__items .carousel4__item,
+        ~ .carousel4__prev > label,
+        ~ .carousel4__next > label,
+        ~ .carousel5__items .carousel5__item,
+        ~ .carousel5__prev > label,
+        ~ .carousel5__next > label,
+        ~ .carousel6__items .carousel6__item,
+        ~ .carousel6__prev > label,
+        ~ .carousel6__next > label,
+        ~ .carousel7__items .carousel7__item,
+        ~ .carousel7__prev > label,
+        ~ .carousel7__next > label,
+        ~ .carousel8__items .carousel8__item,
+        ~ .carousel8__prev > label,
+        ~ .carousel8__next > label,
+        ~ .carousel9__items .carousel9__item,
+        ~ .carousel9__prev > label,
+        ~ .carousel9__next > label,
+        ~ .carousel10__items .carousel10__item,
+        ~ .carousel10__prev > label,
+        ~ .carousel10__next > label,
+        ~ .carousel11__items .carousel11__item,
+        ~ .carousel11__prev > label,
+        ~ .carousel11__next > label {
+          opacity: 0;
+        }
+      }
+
+      @for $i from 1 through $items {
+        &:nth-child(#{$i}) {
+          &:checked {
+            ~ .carousel__items .carousel__item,
+            ~ .carousel1__items .carousel1__item,
+            ~ .carousel2__items .carousel2__item,
+            ~ .carousel3__items .carousel3__item,
+            ~ .carousel4__items .carousel4__item,
+            ~ .carousel5__items .carousel5__item,
+            ~ .carousel6__items .carousel6__item,
+            ~ .carousel7__items .carousel7__item,
+            ~ .carousel8__items .carousel8__item,
+            ~ .carousel9__items .carousel9__item,
+            ~ .carousel10__items .carousel10__item,
+            ~ .carousel11__items .carousel11__item {
+              @if $animation == "default" {
+                &:nth-child(#{$i}) {
+                  opacity: 1;
+                }
+              }
+            }
+
+            ~ .carousel__prev,
+            ~ .carousel1__prev,
+            ~ .carousel2__prev,
+            ~ .carousel3__prev,
+            ~ .carousel4__prev,
+            ~ .carousel5__prev,
+            ~ .carousel6__prev,
+            ~ .carousel7__prev,
+            ~ .carousel8__prev,
+            ~ .carousel9__prev,
+            ~ .carousel10__prev,
+            ~ .carousel11__prev {
+              > label {
+                @if $i == 1 {
+                  &:nth-child(#{$items}) {
+                    @extend %animation-default;
+                  }
+                } @else if $i == $items {
+                  &:nth-child(#{$items - 1}) {
+                    @extend %animation-default;
+                  }
+                } @else {
+                  &:nth-child(#{$i - 1}) {
+                    @extend %animation-default;
+                  }
+                }
+              }
+            }
+
+            ~ .carousel__next,
+            ~ .carousel1__next,
+            ~ .carousel2__next,
+            ~ .carousel3__next,
+            ~ .carousel4__next,
+            ~ .carousel5__next,
+            ~ .carousel6__next,
+            ~ .carousel7__next,
+            ~ .carousel8__next,
+            ~ .carousel9__next,
+            ~ .carousel10__next,
+            ~ .carousel11__next {
+              > label {
+                @if $i == $items {
+                  &:nth-child(1) {
+                    @extend %animation-default;
+                  }
+                } @else {
+                  &:nth-child(#{$i + 1}) {
+                    @extend %animation-default;
+                  }
+                }
+              }
+            }
+
+            ~ .carousel__nav,
+            ~ .carousel1__nav,
+            ~ .carousel2__nav,
+            ~ .carousel3__nav,
+            ~ .carousel4__nav,
+            ~ .carousel5__nav,
+            ~ .carousel6__nav,
+            ~ .carousel7__nav,
+            ~ .carousel8__nav,
+            ~ .carousel9__nav,
+            ~ .carousel10__nav,
+            ~ .carousel11__nav {
+              > label {
+                &:nth-child(#{$i}) {
+                  background: #ccc;
+                  cursor: default;
+                  pointer-events: none;
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+
+    &__items {
+      margin: 0;
+      padding: 0;
+      list-style-type: none;
+      width: 100%;
+      min-height: 305px;
+      position: relative;
+    }
+
+    &__item {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      z-index: 1;
+      transition: opacity 2s;
+      -webkit-transition: opacity 2s;
+      padding-right: 20px;
+
+      img {
+        width: 110%;
+        vertical-align: middle;
+      }
+    }
+
+    &__prev,
+    &__next {
+      > label {
+        cursor: pointer;
+        display: block;
+        width: 20px;
+        height: 20px;
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+        -webkit-transform: translateY(-50%);
+        transition: all 0.3s ease;
+        -webkit-transition: all 0.3s ease;
+        opacity: 0;
+        z-index: 2;
+
+        &:hover,
+        &:focus {
+          opacity: 0.5 !important;
+        }
+
+        &:before,
+        &:after {
+          content: "";
+          position: absolute;
+          width: inherit;
+          height: inherit;
+        }
+
+        &:before {
+          background: linear-gradient(
+              to top,
+              #fff 0%,
+              #fff 10%,
+              rgba(51, 51, 51, 0) 10%
+            ),
+            linear-gradient(to left, #fff 0%, #fff 10%, rgba(51, 51, 51, 0) 10%);
+          width: 60%;
+          height: 60%;
+          top: 20%;
+        }
+      }
+    }
+
+    &__prev {
+      > label {
+        left: 2%;
+
+        &:before {
+          left: 35%;
+          top: 20%;
+          transform: rotate(135deg);
+          -webkit-transform: rotate(135deg);
+        }
+      }
+    }
+
+    &__next {
+      > label {
+        right: 2%;
+
+        &:before {
+          left: 10%;
+          transform: rotate(315deg);
+          -webkit-transform: rotate(315deg);
+        }
+      }
+    }
+
+    &__nav {
+      margin-top: -120px;
+      padding-bottom: 20px;
+      margin-left: 140px;
+      position: relative;
+      text-align: center;
+      width: 100%;
+      z-index: 3;
+
+      > label {
+        border: 2px solid #fff;
+        display: inline-block;
+        border-radius: 50%;
+        cursor: pointer;
+        margin: 0 0.5%;
+        width: 12px;
+        height: 12px;
+      }
+    }
+  }
+}
+
+*,
+*:before,
+*:after {
+  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+}
+
+@include carousel(4);
+
+@media only screen and (max-width: 400px) {
+  .carousel__nav,
+  .carousel1__nav,
+  .carousel2__nav,
+  .carousel3__nav,
+  .carousel4__nav,
+  .carousel5__nav,
+  .carousel6__nav,
+  .carousel7__nav,
+  .carousel8__nav,
+  .carousel9__nav,
+  .carousel10__nav,
+  .carousel11__nav {
+    margin-top: -130px;
+    margin-left: 100px;
+  }
+}
