--- a/src/components/components-page/components-page.scss
+++ b/src/components/components-page/components-page.scss
@@ -26,6 +26,7 @@
 // Style for input with arrow
 .form-subscribe {
   width: 385px;
+  margin-top: 35px;
   & input {
     padding: 24px;
     border: 1px solid grey;
@@ -58,7 +59,7 @@
 .form-subscribe button {
   float: left;
   width: 20%;
-  padding: 14.5px;
+  padding: 17.5px;
   background: #fff;
   color: #bc9cff;
   font-size: 24px;
@@ -140,7 +141,7 @@
     position: relative;
     padding: 0 0 0 1.7em;
     transition: 0.12s;
-    font-size: 18.7px;
+    font-size: 20.6px;
     font-weight: normal;
     margin-bottom: 1.3em;
     font-weight: bold;
@@ -152,7 +153,7 @@
       top: -7px;
       left: 5px;
       text-align: center;
-      font-size: 2.2em;
+      font-size: 2.5em;
       opacity: 0.5;
       line-height: 1;
       transition: 0.5s;
@@ -161,18 +162,18 @@
 }
 
 .room__information {
-  width: 390px;
+  width: 410px;
   &__wrapper {
     display: flex;
     flex-direction: row;
-    padding: 14px 10px 25px 13px;
+    padding: 25px 10px 25px 13px;
     &__description {
       & h4 {
         margin-block-start: 0em;
         margin-block-end: 0.1em;
         margin-left: 15px;
         font-style: normal;
-        font-size: 20px;
+        font-size: 22px;
         font-weight: bold;
         line-height: 24px;
         color: rgba(31, 32, 65, 0.75);
@@ -186,13 +187,13 @@
         color: rgba(31, 32, 65, 0.75);
         margin-left: 15px;
         font-style: normal;
-        font-size: 18.7px;
+        font-size: 20.6px;
         font-weight: 300;
       }
     }
   }
   &__icon {
-    font-size: 32px;
+    font-size: 40px;
     color: #bc9cff;
   }
 }
@@ -206,7 +207,7 @@
     display: flex;
     flex-direction: row;
     margin-left: -15px;
-    margin-top: -7px;
+    margin-top: 30px;
     & img {
       width: 120px;
       height: 120px;
@@ -214,16 +215,14 @@
     & h4 {
       margin-block-start: 1em;
       margin-block-end: 0.4em;
-      font-size: 19.2px;
+      font-size: 21px;
       font-weight: bold;
-      margin-left: -14px;
     }
     & p {
       margin-block-start: 0em;
       margin-block-end: 0em;
-      font-size: 18.5px;
+      font-size: 20px;
       font-weight: 300;
-      margin-left: -14px;
     }
   }
   &__evaluation {
@@ -231,40 +230,16 @@
     margin-top: -24px;
     & p {
       margin-left: 27px;
-      margin-top: -2px;
-      font-size: 18.6px;
+      margin-top: 2px;
+      font-size: 20.6px;
       font-weight: 500;
-      line-height: 32px;
-    }
-    & button {
-      width: 70px;
-      height: 27px;
-      background: #ffffff;
-      border: 1px solid rgba(31, 32, 65, 0.25);
-      box-sizing: border-box;
-      border-radius: 25px;
-      outline: none;
-      color: rgba(31, 32, 65, 0.25);
-      margin-left: 17px;
-      & span {
-        margin-left: 5px;
-      }
-      &:hover {
-        color: #bc9cff;
-        transform: scale(1.2);
-        border-color: #bc9cff;
-        span {
-          opacity: 1;
-          font-style: normal;
-          font-weight: normal;
-          font-size: 10px;
-          line-height: 12px;
-          /* identical to box height */
-          padding-top: 5px;
-        }
-      }
+      line-height: 36px;
     }
   }
+}
+
+.room__feedback__text{
+  margin-left: 20px;
 }
 
 #slider-range {
