--- a/src/components/footer/footer.pug
+++ b/src/components/footer/footer.pug
@@ -5,7 +5,7 @@ footer
       .footer__nav__block
         .logo(class="footer__block logo")
         div
-          p(style='white-space:pre;')
+          p(style='white-space:pre;' class="footer-slogan")
             | Бронирование номеров в лучшем 
             | отеле 2019 года по версии
             | ассоциации «Отельные взгляды»
@@ -42,13 +42,13 @@ footer
             a Связь с нами
       .footer__nav__block
         h3(class="footer__block subtitle") Подписка
-        p(style='white-space:pre;' class="subtitle--describtion")
+        p(style='white-space:pre;' class="subtitle-describtion")
           | Получайте специальные
           | предложения и новости сервиса
         +input-subscription("Email")
-  hr
-  .container
-     .footer__details.row
+  hr(class="footer-strip")
+  div(class="footer__details").container
+     .flex-row
         p(class="footer__details__copyright") Сорyright &copy; 2018 Тохin отель. Все права зачищены. 
         ul.row
             li
