--- a/src/components/info-room/info-room.scss
+++ b/src/components/info-room/info-room.scss
@@ -1,3 +1,19 @@
+.information_top-part{
+    display: flex;
+}
+
+.gallery-top{
+    flex: 2;
+}
+
+.gallery-bottom{
+    flex: 1;
+}
+
+.gallery-bottom--second{
+    margin-top: -7px;
+}
+
 .bottom-part__left{
     width: 53vw;
     display: flex;
@@ -7,7 +23,7 @@
 .information__title{
     font-family: "OpenSans-Bold";
     text-transform: none;
-    font-size: 25.5px;
+    font-size: 28px;
     font-weight: bold;
     margin-left: 15px;
 }
@@ -22,15 +38,15 @@
     padding-top: 70px;
 }
 
-.backgound__first{
-    height: 720px;
-    background-image: url(../images/mainA.jpg);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    padding-top: 220px;
-    width: 100%;
-}
+// .backgound__first{
+//     height: 720px;
+//     background-image: url(../images/mainA.jpg);
+//     background-repeat: no-repeat;
+//     background-position: center;
+//     background-size: cover;
+//     padding-top: 220px;
+//     width: 100%;
+// }
 
 .information__border{
     border-bottom: 2px solid  rgba(31, 32, 65, 0.1);
@@ -38,7 +54,7 @@
 }
 
 .information__rules{
-    width: 360px;
+    width: 400px;
 }
 
 .information__cancel {
@@ -47,18 +63,28 @@
     margin-left: 136px;
     margin-top: 5px;
 }
+
+.information__title--info{
+    margin-bottom: 21px;
+}
+
+.information__title--impression{
+    margin-bottom: 20px;
+}
+
 .information__title--rules{
     margin-left: 40px;
-    margin-top: 30px;
+    margin-top: 50px;
     margin-bottom: 20px;
 }
 
 .information__title--details{
     margin-bottom: 10px;
+    margin-top: 25px;
 }
 
 .information__title--cancel{
-    margin-top: 20px;
+    margin-top: 45px;
     margin-left: 0;
     margin-bottom: 11px;
 }
@@ -69,7 +95,7 @@
 }
 
 .information__impression{
-    margin-left: 4.9vw;
+    margin-left: 5.6vw;
 }
 
 .information__impression-second{
@@ -84,10 +110,22 @@
     display: flex;
     flex-wrap: wrap;
 }
-@media only screen and (max-width: 1650px) {
-    .backgound__first{
-        height: 520px;
+
+.information-text{
+    font-size: 20.6px;
+    margin-top: 40px;
+    line-height: 36px;
+}
+@media only screen and (max-width: 1850px) {
+    .bottom-part__left{
+        width: 30vw;
+        display: flex;
+        flex-wrap: wrap;
     }
+
+    // .backgound__first{
+    //     height: 520px;
+    // }
 
     .bottom-part__left{
         width: 100%;
@@ -114,9 +152,22 @@
         font-size: 20.5px;
     }
       
+    .information__title--rules{
+        margin-left: 20px;
+    }
+
     .information__cancel {
         font-size: 16px;
         line-height: 24px;
         margin-left: 15px;
+    }
+
+    .calculator__container{
+        margin: 0px;
+      }
+
+    .information-text{
+        font-size: 16px;
+        line-height: 26px;
     }
   }
