--- a/src/blocks/littleDropdown/littleDropdown.scss
+++ b/src/blocks/littleDropdown/littleDropdown.scss
@@ -73,12 +73,12 @@
 }
 
 .little-dropdowns .button {
-  width: 30px;
-  height: 30px;
-
+  width: 45px;
+  height: 45px;
   border: 1px solid rgba(31, 32, 65, 0.25);
   box-sizing: border-box;
   border-radius: 22px;
+  background: #ffffff;
 }
 
 .little-dropdowns .title {
