--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -22,6 +22,7 @@
 @import "../blocks/donutChart/donutChart.scss";
 @import "../blocks/slick/slick.scss";
 @import "../blocks/input-dates/input-dates.scss";
+@import "../blocks/comfort-dropdown/comfort-dropdown.scss";
 html,
 body {
   padding: 0;
