--- a/src/blocks/airdatepicker/airdatepicker.pug
+++ b/src/blocks/airdatepicker/airdatepicker.pug
@@ -6,13 +6,13 @@ div.flex-wrap
             class="dateRange range"
             class="datepicker-here"
             id="startDate"
-            placeholder="ДД.ММ.ГГ")
+            placeholder="ДД.ММ.ГГГГ")
             
     div.arrow__wrapper
         input(type="text"
             class="range"
             id="endDate"
-            placeholder="ДД.ММ.ГГ")
+            placeholder="ДД.ММ.ГГГГ")
 
 //- input(type='text' class="datepickerWrap" id='start' data-range="true"
 //-     data-multiple-dates-separator=" - "
