--- a/src/blocks/dropdown/dropdown.scss
+++ b/src/blocks/dropdown/dropdown.scss
@@ -12,7 +12,7 @@
   margin-top: 5px;
   font-style: normal;
   font-weight: normal;
-  font-size: 18px;
+  font-size: 20.6px;
   line-height: 18px;
   color: $color-standart;
   // margin-bottom:35px;
@@ -31,7 +31,9 @@
   // margin-left: 45%;
   // margin-top: 25px;
   color: $black-text;
-  margin-left: 16em;
+  position: absolute;
+  left: 21.5em;
+  top: 1.5em;
 }
 
 .dropdowns .dd-input {
@@ -60,7 +62,7 @@
 }
 
 .dropdowns .dd-menu li {
-  padding: 10px 20px;
+  padding: 5px 20px;
   cursor: pointer;
   white-space: nowrap;
   display: flex;
@@ -72,12 +74,12 @@
 }
 
 .dropdowns .button {
-  width: 30px;
-  height: 30px;
-
+  width: 45px;
+  height: 45px;
   border: 1px solid rgba(31, 32, 65, 0.25);
   box-sizing: border-box;
   border-radius: 22px;
+  background: #ffffff;
 }
 
 .dropdowns .title {
@@ -98,7 +100,7 @@
 }
 
 .dropdowns .text {
-  margin: 7px 30px 0 30px;
+  margin: 17px 17px 0 17px;
 }
 
 .clean {
@@ -112,7 +114,7 @@
   border: none;
   background: transparent;
   outline: none;
-  margin: 10px 0 10px 0px;
+  margin: 30px 0 10px 0px;
 }
 
 .apply {
@@ -125,7 +127,7 @@
   border: none;
   background: transparent;
   outline: none;
-  margin: 10px 0px 10px 0;
+  margin: 30px 0px 10px 0;
 }
 
 // @media only screen and (max-width: 600px) {
