--- a/src/components/search-page/search-page.scss
+++ b/src/components/search-page/search-page.scss
@@ -1,4 +1,5 @@
 .main-background-search{
+    width: 100%;
     max-height: 1300px;
     background-image: url(../images/image.jpg);
     background-repeat: no-repeat;
@@ -15,7 +16,8 @@
     position: relative;
     font-size: 20px;
     left: 70%;
-    margin-top: 600px;
+    margin-top: 50vh;
+    padding-bottom: 3vh;
 }
 
 
